Project/manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-backend-dep
  namespace: project-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      containers:
        - name: project-backend
          image: mlipsan/project-backend:2.08
