Project/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-backend-svc
  namespace: project-space
spec:
  type: ClusterIP
  selector:
    app: project-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
