Project/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-frontend-svc
  namespace: project-space
spec:
  type: ClusterIP
  selector:
    app: project-frontend
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 5173
