Project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
  labels:
    name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-frontend-svc
            port: 
              number: 1234
      - path: /api/todos
        pathType: Prefix
        backend:
          service:
            name: project-backend-svc
            port:
              number: 2345
